--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js"></script>
     <title>Document</title>
 </head>
 <body>
     <main>
         <article>
+            <h1>Tic-Tac-toe</h1>
             <div class="mezok"></div>
         </article>
     </main>
